feat: admin account, file manager
